Feat: Included IgA glomerulonephritis as anpther cause
Desc: IgA glomerulonephritis is anther cause for chronic kidney disease and we have included this also in the project. We are going towards clinical trials and testing with real-world doctors.

--- a/cause.html
+++ b/cause.html
@@ -65,7 +65,7 @@
 <div class="causecontainer">
     <div class="q1">
         <form>
-            Question 1 of 24
+            Question 1 of 29
             <span class="question">
                 Do you feel increased thirst or urination very often?
             </span>
@@ -77,7 +77,7 @@
     </div>
     <div class="q2">
         <form>
-            Question 2 of 24
+            Question 2 of 29
             <span class="question">
                 Did you experience increased hunger naturally, from the past 6 months or beyond?
             </span>
@@ -89,7 +89,7 @@
     </div>
     <div class="q3">
         <form>
-            Question 3 of 24
+            Question 3 of 29
             <span class="question">
                 How often do you experience fatigue considering that the ammount of physical exercise and current meal size largely remained constant?
             </span>
@@ -101,7 +101,7 @@
     </div>
     <div class="q4">
         <form>
-            Question 4 of 24
+            Question 4 of 29
             <span class="question">
                 Are you able to see objects almost clearly or is your vision fairly blurred, considering that your power of eyes sparsely changed?
             </span>
@@ -113,7 +113,7 @@
     </div>
     <div class="q5">
         <form>
-            Question 5 of 24
+            Question 5 of 29
             <span class="question">
                 Do you feel numbness or tingling in the feet or hands?
             </span>
@@ -125,7 +125,7 @@
     </div>
     <div class="q6">
         <form>
-            Question 6 of 24
+            Question 6 of 29
             <span class="question">
                 Do you have sores in your skin anywhere that do not heal or do so but very slowly?
             </span>
@@ -137,7 +137,7 @@
     </div>
     <div class="q7">
         <form>
-            Question 7 of 24
+            Question 7 of 29
             <span class="question">
                 Do you know what trigerred your recent weight loss even though you kept your diet almost unchanged?
             </span>
@@ -149,7 +149,7 @@
     </div>
     <div class="q8">
         <form>
-            Question 8 of 24
+            Question 8 of 29
             <span class="question">
                 You have a blood relative who is or was diagnosed with Diabetes (Type I or Type II), right?
             </span>
@@ -161,7 +161,7 @@
     </div>
     <div class="q9">
         <form>
-            Question 9 of 24
+            Question 9 of 29
             <span class="question">
                 Are you ever diagnosed with insulin resistance?
             </span>
@@ -173,7 +173,7 @@
     </div>
     <div class="q10">
         <form>
-            Question 10 of 24
+            Question 10 of 29
             <span class="question">
                 Do you see horizontal lines on the nails or your nails get broken vertically often?
             </span>
@@ -185,7 +185,7 @@
     </div>
     <div class="q11">
         <form>
-            Question 11 of 24
+            Question 11 of 29
             <span class="question">
                 Did you experience blood in your urine within an year or so?
             </span>
@@ -197,7 +197,7 @@
     </div>
     <div class="q12">
         <form>
-            Question 12 of 24
+            Question 12 of 29
             <span class="question">
                 Do you experience pounding in your chest, neck, or ears very often, cosidering didn't have a Heart Attack even once in your life?
             </span>
@@ -209,7 +209,7 @@
     </div>
     <div class="q13">
         <form>
-            Question 13 of 24
+            Question 13 of 29
             <span class="question">
                 Could you find a reason for your severe headache that occurs almost regularly?
             </span>
@@ -221,7 +221,7 @@
     </div>
     <div class="q14">
         <form>
-            Question 14 of 24
+            Question 14 of 29
             <span class="question">
                 How often do you experience a chest pain, which is clearly not a cardiac arrest?
             </span>
@@ -233,7 +233,7 @@
     </div>
     <div class="q15">
         <form>
-            Question 15 of 24
+            Question 15 of 29
             <span class="question">
                 Do you experience difficulty in breathing considering that its reason wasn't air pollution or a lung disease?
             </span>
@@ -245,7 +245,7 @@
     </div>
     <div class="q16">
         <form>
-            Question 16 of 24
+            Question 16 of 29
             <span class="question">
                 Do you have a blood relative who has or had kidney failure (and the cause of the kidney failure, if you know it).
             </span>
@@ -257,7 +257,7 @@
     </div>
     <div class="q17">
         <form>
-            Question 17 of 24
+            Question 17 of 29
             <span class="question">
                 Do you work in a factory that uses heavy metals? (Heavy metals are Lead, Zinc, Arsenic, etc)
             </span>
@@ -269,7 +269,7 @@
     </div>
     <div class="q18">
         <form>
-            Question 18 of 24
+            Question 18 of 29
             <span class="question">
                 How often do you use herbal medecines that have heavy metals in them?
             </span>
@@ -281,7 +281,7 @@
     </div>
     <div class="q19">
         <form>
-            Question 19 of 24
+            Question 19 of 29
             <span class="question">
                 How often do you feel confused or experience Brain dysfunction such as memory loss considering that you are not suffering from neuro disease?
             </span>
@@ -293,7 +293,7 @@
     </div>
     <div class="q20">
         <form>
-            Question 20 of 24
+            Question 20 of 29
             <span class="question">
                 Do you experience symptoms that indicate problem with your nervous system (e.g. numbness, tingling of hands and feet, and weakness)?
             </span>
@@ -305,7 +305,7 @@
     </div>
     <div class="q21">
         <form>
-            Question 21 of 24
+            Question 21 of 29
             <span class="question">
                 Do you experience anchy joints and muscles (and that was not because of arthritis or any orthopedic disease)?
             </span>
@@ -317,7 +317,7 @@
     </div>
     <div class="q22">
         <form>
-            Question 22 of 24
+            Question 22 of 29
             <span class="question">
                 Did you have an Abdominal pain, nausea, vomiting, and diarrhea within a year or half that went unexplained?
             </span>
@@ -329,7 +329,7 @@
     </div>
     <div class="q23">
         <form>
-            Question 23 of 24
+            Question 23 of 29
             <span class="question">
                 How often do you experience fatigue considering that the ammount of physical exercise and current meal size largely remained constant?
             </span>
@@ -341,16 +341,77 @@
     </div>
     <div class="q24">
         <form>
-            Question 24 of 24
+            Question 24 of 29
             <span class="question">
                 Are you able to see objects almost clearly or is your vision fairly blurred, considering that your power of eyes sparsely changed?
             </span>
             <input type="radio" name="q24" value="0.142857142857143">Yes
             <input type="radio" name="q24" value="-0.0714285714285714">No
             <input type="radio" name="q24" value="0">I fear my power has considerably changed<br/>
-            <input type="submit" value="Finish" class="btn btn-primary finish">
+            <input type="submit" value="Next" class="btn btn-primary next">
         </form>
     </div>
+    <div class="q25">
+        <form>
+            Question 25 of 29
+            <span class="question">
+                Do you experience pink or cola-colored urine due to blood in your urine? (This phenomena is called hematuria)
+            </span>
+            <input type="radio" name="q25" value="0.2">Yes
+            <input type="radio" name="q25" value="-0.1">No
+            <input type="radio" name="q25" value="0">I don't know<br/>
+            <input type="submit" value="Next" class="btn btn-primary next">
+        </form>
+    </div>
+    <div class="q26">
+        <form>
+            Question 26 of 29
+            <span class="question">
+                Do you experience foamy urine due to excess protein? (This phenomena is called proteinuria, and can be looked for in your blood reports)
+            </span>
+            <input type="radio" name="q26" value="0.2">Yes
+            <input type="radio" name="q26" value="-0.1">Not at all
+            <input type="radio" name="q26" value="0">I don't know<br/>
+            <input type="submit" value="Next" class="btn btn-primary next">
+        </form>
+    </div>
+    <div class="q27">
+        <form>
+            Question 27 of 29
+            <span class="question">
+                Do you have a chronic high blood pressure or hypertension?
+            </span>
+            <input type="radio" name="q27" value="0.2">Yes
+            <input type="radio" name="q27" value="-0.1">No
+            <input type="radio" name="q27" value="0">I don't know<br/>
+            <input type="submit" value="Next" class="btn btn-primary next">
+        </form>
+    </div>
+    <div class="q28">
+        <form>
+            Question 28 of 29
+            <span class="question">
+                Do have fluid retention (edema) with swelling evident in your face, hands, feet and abdomen?
+            </span>
+            <input type="radio" name="q28" value="0.2">Yes
+            <input type="radio" name="q28" value="-0.1">No, nothing like that
+            <input type="radio" name="q28" value="0">I don't know<br/>
+            <input type="submit" value="Next" class="btn btn-primary next">
+        </form>
+    </div>
+    <div class="q29">
+        <form>
+            Question 29 of 29
+            <span class="question">
+                Do you know somebody in your family diagnosed with gloerulunephritis or you yourself have been diagnosed with it?
+            </span>
+            <input type="radio" name="q29" value="0.2">Yes
+            <input type="radio" name="q29" value="-0.1">No, I'm sure
+            <input type="radio" name="q29" value="0">I don't know
+            <input type="submit" value="Finish" class="finish btn btn-primary">
+        </form>
+    </div>
+    
     <div class="result">
         <span class="question">
             Computing Results. Please Wait!
@@ -361,10 +422,8 @@
             <span class="back">< Back </span><br/>
             <h4>Other causes include:</h4>
             <p>
-                <u>a drug that is toxic to the kidneys,rare genetic conditions, such as Alport syndrome, renal artery stenosis,
-                Henoch-Schönlein purpura, hemolytic uremic syndrome in children, Lupus nephritis is the medical name for kidney disease caused by lupus,
-                disorders in which the body’s immune system attacks its own cells and organs, such as Goodpasture syndrome, IgA glomerulonephritis, Diabetes (Type I & II), High Blood Pressure, Genetics, Heavy metal poisoning <br/></u>
-                might also be possible.
+                <u>a drug that may be toxic to the kidneys, rare genetic conditions, such as Alport syndrome, renal artery stenosis,
+                Henoch-Schönlein purpura, hemolytic uremic syndrome in children, Lupus nephritis, Goodpasture syndrome, IgA glomerulonephritis, Diabetes (Type I & II), High Blood Pressure, Genetics, Heavy metal poisoning, etc.<br/></u>
             </p>
         </span>
     </div>
