FEAT: Updated scripts and copyright
DESC: I continously update this project to help it maintain its accuracy and be easy to use. I have updated some minor changes in the README and index, no upgrades in the architecture/core algorithm of the app.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
+<section class="probootstrap-intro"  data-stellar-background-ratio="0.5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-10 probootstrap-intro-text">
@@ -79,7 +79,7 @@
 <center><button class="btn btn-info" onclick="window.location.href='https://docs.google.com/viewer?url=https://ayushanand18.github.io/nephron-ai/assets/research-paper-nephron-ai.pdf'"> View the complete Research Paper </button></center>
 <h2>A dream project...</h2>
 <p class="lead" style="font-weight:300 !important;text-align:justify;color:black">Chronic kidney disease, or CKD, causes more deaths than breast cancer or prostate cancer. It is the under-recognized public health crisis. It affects an estimated 37 million people in the U.S. (15% of the adult population; more than 1 in 7 adults) and approximately 90% of those with CKD don’t even know they have it.  1 in 3 American adults (approximately 80 million people) is at risk for CKD. CKD is more common in women (15%) than men (12%).  CKD is the 9th leading cause of death in the U.S.  In 2016, over 500,000 patients received dialysis treatment, and over 200,000 lived with a kidney transplant. <br/>
-Even though I am a very young member of this planet, a 16 year-old high schooler from India, I decided to figure how AI can help predict, diagnose and treat Chronic Kidney Disease. <br/>
+Even though I am a very young member of this planet, a CS undergrad at NIT Durgapur, India, I decided to figure how AI can help predict, diagnose and treat Chronic Kidney Disease. <br/>
 <h3>NephronAI works in three steps:</h3></p>
 </div>
 </div>
