--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
+<section class="probootstrap-intro"  data-stellar-background-ratio="0.5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
@@ -100,7 +100,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 <div class="col-md-3 col-sm-6 probootstrap-animate">
 <img src="assets/prpic.png" alt="Ayush Anand " class="img-responsive">
 <h3>Ayush Anand</h3>
-<p>Founder | Owner</p>
+<p>Founder | CS @ NIT Durgapur</p>
 </div>
 
 </div>
