--- a/terms.html
+++ b/terms.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
+<section class="probootstrap-intro" data-stellar-background-ratio="0.5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
